# rcsk-v3

./: README.md  pyproject.toml
examples/: basic_cycle.py
rcsk/: __init__.py
rcsk/agents/: __init__.py  critic.py  dream.py  executor.py  planner.py  shadow.py
rcsk/core/: __init__.py  kernel.py
rcsk/evolution/: __init__.py  controller.py
rcsk/governance/: __init__.py  policy.py
rcsk/memory/: __init__.py  graph.py
rcsk/observability/: __init__.py  event_log.py
rcsk/swarm/: __init__.py  node.py
rcsk/utils/: ids.py
runtime/: run_local.py
